[package]
name = "rust_ci_cd"
version = "0.3.0"
authors = ["Mayckon Giovani <mayckonrlyeh@gmail.com>"]
edition = "2018"
description = "Rust CI/CD"
license = ""
repository = ""
readme = "./README.md"
keywords = ["rust", "example", "project", "lib"]
categories = ["development-tools"]

[dependencies]
is-odd = "1.0"
